Search Bar: - mobile view fixes after recent changes - make 'clear input field' button larger on mobiles

--- a/src/Modals/Modals.css
+++ b/src/Modals/Modals.css
@@ -12,6 +12,7 @@
 
 .modal--open {
   display: block;
+  z-index: 4;
 }
 
 .modal__container {
